--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
+    "mongoose": "^8.13.1",
     "mysql2": "^3.14.0",
     "railway": "^2.0.17",
     "sqlite3": "^5.1.7"
